First test version commit.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 PLUME_AUTH_URL='https://external.sso.plume.com/oauth2/[ABC]/v1/token'
-PLUME_HASH='Basic [ABC]'
+PLUME_AUTH_HASH='Basic [ABC]'
 PLUME_AUTH_SCOPE=''
 PLUME_PARTNER_ID=''
 PLUME_GROUP_ID=''
